[package]
name = "owfs"
version = "0.1.0"
edition = "2021"
authors = ["Sergiy S. <div@altertech.com>"]
license = "MIT"
description = "Rust API for OWFS (1-Wire file system)"
repository = "https://github.com/alttch/owfs-rs"
readme = "README.md"
keywords = ["owfs", "one-wire", "1-wire", "w1"]

[lib]
name = "owfs"
path = "src/lib.rs"

[dependencies]
libc = "0.2.126"

[build-dependencies]
num_cpus = { version = "1.16.0", optional = true }
ureq = { version = "2.9.7", optional = true }

[features]
vendored = ["num_cpus", "ureq"]
